--- a/AutoPurchase/app/src/main/res/layout/loansummary_layout.xml
+++ b/AutoPurchase/app/src/main/res/layout/loansummary_layout.xml
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="goDataEntry"
+        android:onClick="returnData"
         android:text="@string/go_data_entry" />
 
 </RelativeLayout>
