--- a/AutoPurchase/app/src/main/res/layout/purchase_layout.xml
+++ b/AutoPurchase/app/src/main/res/layout/purchase_layout.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <!-- LOGO AND DATA ENTRY INSTRUCTION -->
 
