Android Test part 2 Completed

--- a/TravelMilesCalculator/app/src/main/res/layout/activity_main.xml
+++ b/TravelMilesCalculator/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sCityOne"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true" />
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sCityTwo"
-        android:layout_below="@+id/sCityOne"
+        android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true" />
 
     <Button
@@ -33,5 +33,23 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="To City:"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/sCityOne"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="From City:"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
