--- a/TravelMilesCalculator/app/src/main/res/layout-land/activity_main.xml
+++ b/TravelMilesCalculator/app/src/main/res/layout-land/activity_main.xml
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/sCityOne"
         android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/sCityTwo"
-        android:layout_marginEnd="316dp" />
+        android:layout_alignParentStart="true" />
 
     <Spinner
         android:layout_width="wrap_content"
