--- a/Comp259_FinalProject_Guillaume2127/app/src/main/res/layout/contact_details.xml
+++ b/Comp259_FinalProject_Guillaume2127/app/src/main/res/layout/contact_details.xml
@@ -7,5 +7,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listViewContactDetails"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"></ListView>
 </LinearLayout>
