--- a/Comp259_FinalProject_Guillaume2127/app/src/main/res/layout/edit_contact.xml
+++ b/Comp259_FinalProject_Guillaume2127/app/src/main/res/layout/edit_contact.xml
@@ -42,5 +42,6 @@
         android:layout_height="wrap_content"
         android:text="Confirm Update"
         android:id="@+id/btnUpdate"
+        android:onClick="contactUpdate"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
